--- a/cropper/index.css
+++ b/cropper/index.css
@@ -1,6 +1,11 @@
 @import url("loader.css");
 @import url("cropper.css");
 
+body {
+    height: 100vh;
+    max-height: 100vh;
+}
+
 * {
     margin: 0;
     padding: 0;
